simply types, calc base offset map

--- a/bin/dune
+++ b/bin/dune
@@ -2,4 +2,5 @@
  (public_name redistribution)
  (name main)
  (libraries core redistribution)
- (preprocess (pps ppx_jane)))
+ (preprocess
+  (pps ppx_jane)))
